# custom_formatter

./: Cargo.toml  README.md  rustfmt.toml
custom_formatter_macro/: Cargo.toml
custom_formatter_macro/src/: lib.rs
examples/: builtin.rs  color.rs
src/: impls.rs  lib.rs
